# gemini-cli-usage

./: README.md  pyproject.toml
src/gemini_cli_usage/: __init__.py  __main__.py
tests/: test_gemini_cli_usage.py
