[project]
name = "gemini-cli-usage"
version = "0.1.6"
description = "Gemini CLI quota monitor — fetches Code Assist quota data from Google's backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_cli_usage"]

[project.urls]
Homepage = "https://github.com/wakamex/gemini-cli-usage"
Source = "https://github.com/wakamex/gemini-cli-usage"

[project.scripts]
gemini-cli-usage = "gemini_cli_usage:main"
